Fix color contrasts

--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@ header {
 }
 
 .work-item-bar > ul {
-  color: gray;
-  font-size: 16px;
+  font-size: 14px;
   display: flex;
   gap: 25px;
 }
@@ -121,7 +120,7 @@ header {
 .stackbar-item {
   padding: 4px 12px;
   background: #ebebff;
-  color: #6070ff;
+  color: #0011ff;
   border-radius: 8px;
   float: left;
   height: max-content;
@@ -239,7 +238,7 @@ header {
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-  color: #e0dcdc;
+  color: #fff;
   transition: 0.5s all;
 }
 
@@ -301,9 +300,9 @@ h4 {
 
 .button-style-1 {
   width: max-content;
-  border: 1px solid #6070ff;
+  border: 1px solid #0011ff;
   border-radius: 8px;
-  color: #6070ff;
+  color: #0011ff;
   background-color: #fff;
   padding: 12px;
   font-size: 17px;
@@ -312,19 +311,19 @@ h4 {
 }
 
 .button-style-1:hover {
-  background-color: #6070ff;
+  background-color: #0011ff;
   color: #fff;
 }
 
 .button-style-2 {
-  color: #6070ff;
+  color: #0011ff;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
   padding: 15px;
   border-radius: 10px;
-  border: 1px solid #6070ff;
+  border: 1px solid #0011ff;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
   transition: 0.5s all;
 }
@@ -336,7 +335,7 @@ h4 {
 }
 
 .button-style-2:focus {
-  background: #2230d2;
+  background: #0011ff;
   color: #fff;
 }
 
@@ -371,7 +370,7 @@ h4 {
   }
 
   .nav-link:hover {
-    color: #6070ff;
+    color: #0011ff;
   }
 
   /* Intro section */
@@ -399,11 +398,11 @@ h4 {
   }
 
   .card:hover {
-    border-color: #6070ff;
+    border-color: #0011ff;
   }
 
   .card:hover .card-description > button {
-    background-color: #6070ff;
+    background-color: #0011ff;
     color: #fff;
   }
 
